--- a/index.html
+++ b/index.html
@@ -8,7 +8,46 @@
 
   <body>
 
-    <!-- TODO: Use your components to create a simple landing page -->
+<div class="banner" style="background-image: url(images/background.jpg)">
+        <div class="container">
+          <h1>Change your life, learn to code</h1>
+          <p>Le Wagon is a 9-week full-stack coding bootcamp based out of 30 cities in 20 countries.</p>
+          <a href="#" class="btn-airbnb">Check availability</a>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="card-trip">
+          <img src="images/place.jpg" alt="place">
+          <div class="card-trip-info">
+            <div>
+              <h2>Trip to England country side</h2>
+              <p>Discover the British jewels</p>
+            </div>
+            <h2>$3999</h2>
+          </div>
+        </div>
+        <div class="card-trip">
+          <img src="images/place.jpg" alt="place">
+          <div class="card-trip-info">
+            <div>
+              <h2>Trip to England country side</h2>
+              <p>Discover the British jewels</p>
+            </div>
+            <h2>$3999</h2>
+          </div>
+        </div>
+        <div class="card-trip">
+          <img src="images/place.jpg" alt="place">
+          <div class="card-trip-info">
+            <div>
+              <h2>Trip to England country side</h2>
+              <p>Discover the British jewels</p>
+            </div>
+            <h2>$3999</h2>
+          </div>
+        </div>
+      </div>
 
   </body>
 
