--- a/components.html
+++ b/components.html
@@ -10,8 +10,50 @@
       <h1 class="text-center">Components Demo</h1>
 
       <!-- TODO: live-code your components -->
-      <h2>1. A container</h2>
-      <p>Le Wagon is a 9-week full-stack coding bootcamp based out of 30 cities in 20 countries. We bring coding skills to creative people who aim to create their own startup, or add a technical know-how to their skillset.</p>
+      <div class="container">
+        <h2>1. A container</h2>
+        <p>Le Wagon is a 9-week full-stack coding bootcamp based out of 30 cities in 20 countries. We bring coding skills to creative people who aim to create their own startup, or add a technical know-how to their skillset.</p>
+        <h2>2. A avatar</h2>
+        <img class="avatar" src="images/someone.jpg" alt="someone">
+        <img class="avatar-lg" src="images/someone-else.jpg" alt="someone else">
+        <h2>3. A button</h2>
+        <a href="#" class="btn-medium">Follow</a>
+        <a href="#" class="btn-airbnb">Check availability</a>
+        <h2>4. A banner</h2>
+      </div>
+      <div class="banner" style="background-image: url(images/background.jpg)">
+        <div class="container">
+          <h1>Change your life, learn to code</h1>
+          <p>Le Wagon is a 9-week full-stack coding bootcamp based out of 30 cities in 20 countries.</p>
+          <a href="#" class="btn-airbnb">Check availability</a>
+        </div>
+      </div>
+      <div class="container">
+        <h2>5. A category card</h2>
+        <div class="card-category" style="background-image: url(images/breakfast.jpg)">
+          <h2>Breakfast</h2>
+        </div>
+        <h2>5. A product card</h2>
+        <div class="card-product">
+          <img src="images/product.jpg" alt="product">
+          <div>
+            <h2>A pokemon bag</h2>
+            <p>A wonderful home for your special someone</p>
+          </div>
+        </div>
+        <h2>5. A trip card</h2>
+        <div class="card-trip">
+          <img src="images/place.jpg" alt="place">
+          <div class="card-trip-info">
+            <div>
+              <h2>Trip to England country side</h2>
+              <p>Discover the British jewels</p>
+            </div>
+            <h2>$3999</h2>
+          </div>
+        </div>
+      </div>
+
 
   </body>
 </html>
